force-app/main/default/objects/RequestForms__c/RequestForms__c.object-meta.xml
<CustomObject>
    <description>This will give access to the Service Request Form Object.</description>
    <label>Service Request Forms</label>
    <nameField>
        <label>Service Request Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>