force-app/main/default/objects/RequestForms__c/fields/deliverydate__c.field-meta.xml
<CustomField>
    <fullName>deliverydate__c</fullName>
    <description>Records the customer’s expected delivery date.</description>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>