force-app/main/default/objects/RequestForms__c/fields/pincode__c.field-meta.xml
<CustomField>
    <fullName>pincode__c</fullName>
    <description>Stores the pin code for the customer’s delivery location.</description>
    <label>Delivery Pincode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>