force-app/main/default/objects/RequestForms__c/fields/products__c.field-meta.xml
<CustomField>
    <fullName>products__c</fullName>
    <description>Captures a long-form list of products the customer is interested in.</description>
    <label>Interested Products</label>
    <type>TextArea</type>
</CustomField>