force-app/main/default/objects/RequestForms__c/fields/RequestForm__c.field-meta.xml
<CustomField>
    <fullName>RequestForm__c</fullName>
    <description>Captures customer proposals submitted by sales representatives, including product interests and delivery expectations.</description>
    <displayFormat>SRF-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>